# Pulse-Core

./: AGENTS.md  CHANGELOG.md  FIX_PLAN.md  README.md  package-lock.json  package.json  start.bat
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: pulse-theme.nsi
src-tauri/src/: audio_manager.rs  db.rs  lib.rs  main.rs  metadata.rs
src/components/: PlayerControls.tsx  PlayerModule.tsx  PlaylistModule.tsx  VisualizerModule.tsx
