[package]
name = "pulsecore"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pulsecore_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2.7.1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
lofty = "0.21"
symphonia = { version = "0.5", features = ["all"] }
cpal = "0.17"
rustfft = "6.4.1"
walkdir = "2.5.0"

